@@ -5,6 +5,9 @@ CVS code -
 	  only optional value.  Also fix a wording problem in
 	  -W/--wordbounds.  Changes to usage(), nano.1, nanorc.5,
 	  rnano.1, nano.texi, and nanorc.sample.in. (DLR)
+	- Fix mouse support so that it really ignores everything except
+	  releases of button 1 (i.e, left clicks).  Changes to
+	  enable_mouse_support() and get_mouseinput(). (DLR)
 - doc/syntax/c.nanorc:
 	- Since .i and .ii are preprocessed C and C++ output, colorize
 	  them here. (Mike Frysinger)
